fix checkbox being visible in firefox

--- a/server/static/main.css
+++ b/server/static/main.css
@@ -69,8 +69,7 @@ button {
     border: #0D0 solid 5px;
 }
 #topbar {
-    width: 0;
-    height: 0;
+    opacity: 0;
 }
 #topbar:checked ~ #plants {
     position: relative;
